Started Creating Database to store the saved teams after the app is closed.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,6 +25,9 @@
             android:enabled="true"
             android:exported="true">
         </receiver>
+
+        <activity android:name=".TeamDetailActivity">
+        </activity>
     </application>
 
 </manifest>
